--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.9.3",
     "swiper": "^11.1.4",
     "tsparticles": "^2.9.3",
